cluster/apps/mobivey/be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobivey-be
  namespace: mobivey
  labels:
    app: mobivey-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mobivey-be
  template:
    metadata:
      name: mobivey-be
      labels:
        app: mobivey-be
        allow: db
    spec:
      imagePullSecrets:
        - name: image-pull-creds
      containers:
        - name: mobivey-be
          image: ghcr.io/stefanabl/motionmapper-backend:20250507161610
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8200
              protocol: TCP
      restartPolicy: Always
