cluster/apps/mobivey/debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  namespace: mobivey
  labels:
    app: ubuntu
spec:
  containers:
    - image: ubuntu
      command:
        - "sleep"
        - "604800"
      imagePullPolicy: IfNotPresent
      name: ubuntu
  restartPolicy: Always
