cluster/apps/mobivey/be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobivey-be
  namespace: mobivey
spec:
  selector:
    app: mobivey-be
  ports:
    - protocol: TCP
      port: 8200
      targetPort: 8200
