cluster/apps/mobivey/be-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobivey-be
  namespace: mobivey
  annotations:
    cert-manager.io/issuer: letsencrypt-dns01-issuer
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/common-name: &host api.mobivey.de
spec:
  ingressClassName: external-ingress
  tls:
    - hosts:
        - *host
      secretName: mobivey-be-cert
  rules:
    - host: *host
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: mobivey-be
                port:
                  number: 8200
